--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="top-container">
     <div class="header">
-      <img src="img/brand-icon.jpg" alt="menu icon" class="banner-img">
+      <img src="/img/brand-icon.jpg" alt="menu icon" class="banner-img">
       <ul class="menu">
         <li>About</li>
         <li>Work</li>
